add more various icons